--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -26,7 +26,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/txt_location"
+        android:id="@+id/txt_score"
         android:drawablePadding="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,12 +38,12 @@
         app:drawableStartCompat="@drawable/pin" />
 
     <TextView
-        android:id="@+id/txt_company"
+        android:id="@+id/txt_urlhtml"
         android:drawablePadding="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/img_photo"
-        android:layout_below="@+id/txt_location"
+        android:layout_below="@+id/txt_score"
         android:layout_marginStart="26dp"
         android:layout_marginTop="10dp"
         android:text="@string/location"
