--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -6,8 +6,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/blue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_photo"
@@ -30,7 +43,7 @@
             android:layout_marginTop="16dp"
             android:text="@string/name_user"
             android:textSize="24sp"
-            android:textColor="@color/blue"
+            android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/img_photo"
             tools:layout_editor_absoluteX="16dp" />
 
@@ -46,6 +59,7 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="24dp"
