--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/lv_list"
@@ -8,44 +9,55 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_photo"
-        android:src="@drawable/github"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:src="@drawable/github"
+        app:civ_border_color="@color/silver"
         app:civ_border_width="2dp"
-        app:civ_border_color="@color/silver"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
+        android:layout_marginStart="24dp"
         android:layout_toEndOf="@id/img_photo"
         android:text="@string/name_user"
+        android:textColor="#78909C"
         android:textSize="18sp"
-        android:textColor="@color/blue"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/img_photo"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_score"
-        android:drawablePadding="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/img_photo"
         android:layout_below="@+id/txt_name"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="26dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_toEndOf="@+id/img_photo"
+        android:drawablePadding="8dp"
         android:text="@string/location"
-        app:drawableStartCompat="@drawable/ic_baseline_bubble_chart_24" />
+        app:drawableStartCompat="@drawable/ic_baseline_bubble_chart_24"
+        app:layout_constraintStart_toEndOf="@+id/img_photo"
+        app:layout_constraintTop_toBottomOf="@+id/txt_urlhtml" />
 
     <TextView
         android:id="@+id/txt_urlhtml"
-        android:drawablePadding="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/img_photo"
         android:layout_below="@+id/txt_score"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_toEndOf="@+id/img_photo"
+        android:drawablePadding="8dp"
         android:text="@string/location"
-        app:drawableStartCompat="@drawable/ic_baseline_computer_24" />
-</RelativeLayout>
+        app:drawableStartCompat="@drawable/ic_baseline_computer_24"
+        app:layout_constraintStart_toEndOf="@+id/img_photo"
+        app:layout_constraintTop_toBottomOf="@+id/txt_name" />
+</androidx.constraintlayout.widget.ConstraintLayout>
