--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="blue">#93B5C6</color>
     <color name="silver">#C9CCD5</color>
     <color name="silver_200">#E4D8DC</color>
+    <color name="red">#e31b23</color>
 </resources>
